# AiBoard

./: README.md  compose.yaml
.github/workflows/: test.yml
backend/: .env  db.py  dockerfile  main.py  models.py  pyproject.toml  settings.py
frontend/: default.conf  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  BoardAdd.jsx  BoardView.jsx  Header.jsx  Home.jsx  Notfound.jsx
frontend/utils/: network.js
