[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.135.3",
    "mariadb>=1.1.14",
    "pydantic>=2.12.5",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.1.6",
    "langgraph-swarm>=0.1.0",
    "ollama>=0.6.1",
]
